{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 132,
  "lineage": "14f9315c-d2ed-5967-199a-a37ce5bab711",
  "resources": [
    {
      "module": "module.app-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "igw-07f538a47915b8277",
            "owner_id": "069717985088",
            "tags": {
              "Application": "rpm",
              "Environment": "prod",
              "Name": "cohns-prod-rpm-us-west-2-vpc-igw"
            },
            "vpc_id": "vpc-0d616a571dd74c1bc"
          },
          "dependencies": [
            "module.app-vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rpm-asg",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:069717985088:loadbalancer/app/cohns-prod-rpm-us-west-2-alb/063a17a04ce592be",
            "arn_suffix": "app/cohns-prod-rpm-us-west-2-alb/063a17a04ce592be",
            "dns_name": "cohns-prod-rpm-us-west-2-alb-1878941079.us-west-2.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-2:069717985088:loadbalancer/app/cohns-prod-rpm-us-west-2-alb/063a17a04ce592be",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cohns-prod-rpm-us-west-2-alb",
            "security_groups": [
              "sg-020eef68f3239a146",
              "sg-0511ba5be7fd6ed17",
              "sg-09635e2818cac7109",
              "sg-0b63b1888eee5ff6b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0220c0f4713de085d"
              },
              {
                "subnet_id": "subnet-02c9dbba3586f171c"
              }
            ],
            "subnets": [
              "subnet-0220c0f4713de085d",
              "subnet-02c9dbba3586f171c"
            ],
            "tags": {
              "Application": "rpm",
              "Company": "cohns",
              "Environment": "prod",
              "Name": "cohns-prod-us-west-2-rpm-asg"
            },
            "vpc_id": "vpc-0d616a571dd74c1bc",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.app-vpc.aws_security_group.allow_http",
            "module.app-vpc.aws_security_group.allow_https",
            "module.app-vpc.aws_security_group.allow_outbound",
            "module.app-vpc.aws_security_group.allow_ssh",
            "module.app-vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rpm-asg",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:069717985088:listener/app/cohns-prod-rpm-us-west-2-alb/063a17a04ce592be/b84820d578649015",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:069717985088:targetgroup/cohns-prod-rpm-us-west-2-tg/4c7107249899b8b7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:069717985088:listener/app/cohns-prod-rpm-us-west-2-alb/063a17a04ce592be/b84820d578649015",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:069717985088:loadbalancer/app/cohns-prod-rpm-us-west-2-alb/063a17a04ce592be",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.app-vpc.aws_security_group.allow_http",
            "module.app-vpc.aws_security_group.allow_https",
            "module.app-vpc.aws_security_group.allow_outbound",
            "module.app-vpc.aws_security_group.allow_ssh",
            "module.app-vpc.aws_vpc.app-vpc",
            "module.rpm-asg.aws_lb.alb",
            "module.rpm-asg.aws_lb_target_group.alb_target_group"
          ]
        }
      ]
    },
    {
      "module": "module.rpm-asg",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:069717985088:listener/app/cohns-prod-rpm-us-west-2-alb/063a17a04ce592be/86d1a71d49173a06",
            "certificate_arn": "arn:aws:acm:us-west-2:069717985088:certificate/fa21c11d-b01d-4580-afde-9be644794fd4",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:069717985088:targetgroup/cohns-prod-rpm-us-west-2-tg/4c7107249899b8b7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:069717985088:listener/app/cohns-prod-rpm-us-west-2-alb/063a17a04ce592be/86d1a71d49173a06",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:069717985088:loadbalancer/app/cohns-prod-rpm-us-west-2-alb/063a17a04ce592be",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "module.app-vpc.aws_security_group.allow_http",
            "module.app-vpc.aws_security_group.allow_https",
            "module.app-vpc.aws_security_group.allow_outbound",
            "module.app-vpc.aws_security_group.allow_ssh",
            "module.app-vpc.aws_vpc.app-vpc",
            "module.rpm-asg.aws_lb.alb",
            "module.rpm-asg.aws_lb_target_group.alb_target_group"
          ]
        }
      ]
    },
    {
      "module": "module.rpm-asg",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:069717985088:targetgroup/cohns-prod-rpm-us-west-2-tg/4c7107249899b8b7",
            "arn_suffix": "targetgroup/cohns-prod-rpm-us-west-2-tg/4c7107249899b8b7",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200-299",
                "path": "/php/login.php",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:069717985088:targetgroup/cohns-prod-rpm-us-west-2-tg/4c7107249899b8b7",
            "lambda_multi_value_headers_enabled": false,
            "name": "cohns-prod-rpm-us-west-2-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 3600,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d616a571dd74c1bc"
          },
          "dependencies": [
            "module.app-vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "peer-route-table",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d87d85d33e5e53ea",
            "owner_id": "069717985088",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Application": "rpm",
              "Environment": "prod",
              "Name": "cohns-prod-rpm-us-west-2-peer-rtb"
            },
            "vpc_id": "vpc-0d616a571dd74c1bc"
          },
          "dependencies": [
            "module.app-vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-052198bf095760117",
            "owner_id": "069717985088",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07f538a47915b8277",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Company": "cohns",
              "Environment": "prod",
              "Name": "cohns-prod-rpm-us-west-2-rtb",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d616a571dd74c1bc"
          },
          "dependencies": [
            "module.app-vpc.aws_internet_gateway.default",
            "module.app-vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067453d8159bd5434",
            "route_table_id": "rtb-052198bf095760117",
            "subnet_id": "subnet-0220c0f4713de085d"
          },
          "dependencies": [
            "module.app-vpc.aws_internet_gateway.default",
            "module.app-vpc.aws_route_table.r",
            "module.app-vpc.aws_subnet.public_subnet",
            "module.app-vpc.aws_vpc.app-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062e422e053921387",
            "route_table_id": "rtb-052198bf095760117",
            "subnet_id": "subnet-02c9dbba3586f171c"
          },
          "dependencies": [
            "module.app-vpc.aws_internet_gateway.default",
            "module.app-vpc.aws_route_table.r",
            "module.app-vpc.aws_subnet.public_subnet",
            "module.app-vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_flask",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:069717985088:security-group/sg-0b60f954632340104",
            "description": "Allow flask inbound traffic for rpm",
            "egress": [],
            "id": "sg-0b60f954632340104",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "rpm-allow-flask",
            "name_prefix": null,
            "owner_id": "069717985088",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "rpm",
              "Environment": "prod",
              "Name": "cohns-prod-rpm-us-west-2-flask-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d616a571dd74c1bc"
          },
          "dependencies": [
            "module.app-vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:069717985088:security-group/sg-0b63b1888eee5ff6b",
            "description": "Allow http inbound traffic rpm",
            "egress": [],
            "id": "sg-0b63b1888eee5ff6b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "rpm-allow-http",
            "name_prefix": null,
            "owner_id": "069717985088",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "rpm",
              "Environment": "prod",
              "Name": "cohns-prod-rpm-us-west-2-http-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d616a571dd74c1bc"
          },
          "dependencies": [
            "module.app-vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_https",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:069717985088:security-group/sg-020eef68f3239a146",
            "description": "Allow https inbound traffic rpm",
            "egress": [],
            "id": "sg-020eef68f3239a146",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "rpm-allow-https",
            "name_prefix": null,
            "owner_id": "069717985088",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "rpm",
              "Environment": "prod",
              "Name": "cohns-prod-rpm-us-west-2-https-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d616a571dd74c1bc"
          },
          "dependencies": [
            "module.app-vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_mysql",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:069717985088:security-group/sg-0ff873c96fa61d5ea",
            "description": "Allow mysql inbound traffic rpm",
            "egress": [],
            "id": "sg-0ff873c96fa61d5ea",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rpm-allow-mysql",
            "name_prefix": null,
            "owner_id": "069717985088",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "rpm",
              "Environment": "prod",
              "Name": "cohns-prod-rpm-us-west-2-mysql-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d616a571dd74c1bc"
          },
          "dependencies": [
            "module.app-vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_nfs",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:069717985088:security-group/sg-0059a64395a74684f",
            "description": "Allow nfs inbound traffic for rpm",
            "egress": [],
            "id": "sg-0059a64395a74684f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "rpm-allow-nfs",
            "name_prefix": null,
            "owner_id": "069717985088",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "rpm",
              "Environment": "prod",
              "Name": "cohns-prod-rpm-us-west-2-nfs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d616a571dd74c1bc"
          },
          "dependencies": [
            "module.app-vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:069717985088:security-group/sg-0511ba5be7fd6ed17",
            "description": "Allow outbound traffic for rpm",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0511ba5be7fd6ed17",
            "ingress": [],
            "name": "rpm-allow-outbound",
            "name_prefix": null,
            "owner_id": "069717985088",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "rpm",
              "Environment": "prod",
              "Name": "cohns-prod-rpm-us-west-2-outbound-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d616a571dd74c1bc"
          },
          "dependencies": [
            "module.app-vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:069717985088:security-group/sg-09635e2818cac7109",
            "description": "Allow SSH inbound traffic for rpm",
            "egress": [],
            "id": "sg-09635e2818cac7109",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "rpm-allow-ssh",
            "name_prefix": null,
            "owner_id": "069717985088",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "rpm",
              "Environment": "prod",
              "Name": "cohns-prod-rpm-us-west-2-ssh-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d616a571dd74c1bc"
          },
          "dependencies": [
            "module.app-vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:069717985088:subnet/subnet-03af697c9be1f46e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.96.0.0/21",
            "id": "subnet-03af697c9be1f46e2",
            "map_public_ip_on_launch": false,
            "owner_id": "069717985088",
            "tags": {
              "Application": "rpm",
              "Environment": "prod",
              "Name": "cohns-prod-rpm-us-west-2a-prv",
              "SubnetType": "Private"
            },
            "vpc_id": "vpc-0d616a571dd74c1bc"
          },
          "dependencies": [
            "module.app-vpc.aws_vpc.app-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:069717985088:subnet/subnet-0c4b47dd6580841a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.96.8.0/21",
            "id": "subnet-0c4b47dd6580841a8",
            "map_public_ip_on_launch": false,
            "owner_id": "069717985088",
            "tags": {
              "Application": "rpm",
              "Environment": "prod",
              "Name": "cohns-prod-rpm-us-west-2b-prv",
              "SubnetType": "Private"
            },
            "vpc_id": "vpc-0d616a571dd74c1bc"
          },
          "dependencies": [
            "module.app-vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:069717985088:subnet/subnet-0220c0f4713de085d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.96.16.0/21",
            "id": "subnet-0220c0f4713de085d",
            "map_public_ip_on_launch": true,
            "owner_id": "069717985088",
            "tags": {
              "Application": "rpm",
              "Environment": "prod",
              "Name": "cohns-prod-rpm-us-west-2a-pub",
              "SubnetType": "Public"
            },
            "vpc_id": "vpc-0d616a571dd74c1bc"
          },
          "dependencies": [
            "module.app-vpc.aws_vpc.app-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:069717985088:subnet/subnet-02c9dbba3586f171c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.96.24.0/21",
            "id": "subnet-02c9dbba3586f171c",
            "map_public_ip_on_launch": true,
            "owner_id": "069717985088",
            "tags": {
              "Application": "rpm",
              "Environment": "prod",
              "Name": "cohns-prod-rpm-us-west-2b-pub",
              "SubnetType": "Public"
            },
            "vpc_id": "vpc-0d616a571dd74c1bc"
          },
          "dependencies": [
            "module.app-vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app-vpc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:069717985088:vpc/vpc-0d616a571dd74c1bc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.96.0.0/16",
            "default_network_acl_id": "acl-0578ee572cc14399f",
            "default_route_table_id": "rtb-0b9914024594d908d",
            "default_security_group_id": "sg-021500a1d60305e87",
            "dhcp_options_id": "dopt-b7e7e5ce",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d616a571dd74c1bc",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b9914024594d908d",
            "owner_id": "069717985088",
            "tags": {
              "Environment": "prod",
              "Name": "cohns-prod-rpm-us-west-2-vpc",
              "Service": "rpm"
            }
          }
        }
      ]
    },
    {
      "module": "module.app-vpc",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peer",
      "each": "list",
      "provider": "provider.aws"
    }
  ]
}